fix: feedbackMessage of type loading to have align-items to center to avoid broken size of spinner icon

--- a/src/hooks/useFeedbackMessage/useFeedbackMessage.module.css
+++ b/src/hooks/useFeedbackMessage/useFeedbackMessage.module.css
@@ -54,6 +54,7 @@
 
     [class~=ant-message-custom-content] {
       display: flex !important;
+      align-items: center;
     }
   }
 }
